--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,8 @@ branches:
 build: off  # будем использовать свой скрипт сборки
 
 install:
-  - chmod +x gradlew
+  - java -jar ./artifacts/app-order.jar &
 
 build_script:
+  - chmod +x gradlew
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
